--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <!-- extarnal css  -->
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- header section  -->
@@ -39,54 +41,165 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link " href="#"
-                    >Shop</a
-                  >
+                  <a class="nav-link" href="#">Shop</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link "  href="#"
-                    >News</a
-                  >
+                  <a class="nav-link" href="#">News</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contact</a>
                 </li>
               </ul>
-              <button type="button" class="btn btn-danger px-4 py-2 fw-bold fs-5  ">Search</button>
+              <button
+                type="button"
+                class="btn btn-danger px-4 py-2 fw-bold fs-5"
+              >
+                Search
+              </button>
             </div>
           </div>
         </nav>
       </section>
       <!-- banner section  -->
-      <section class="container">
-        <div id="carouselExampleIndicators" class="carousel slide">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+      <section class="container my-5 py-5 bg-banner">
+        <div id="carouselExampleIndicators" class="carousel slide my-5 py-2">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleIndicators"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
           </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row align-items-center px-md-5 mx-md-5">
+                <div class="col-md-6 my-3">
+                  <h1 class="display-4 fw-bolder">Ride-on R15 V4 with Smile</h1>
+                  <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit
+                    mollit.
+                  </p>
+                  <button
+                    type="button"
+                    class="btn btn-danger px-5 py-2 fw-bold fs-5"
+                  >
+                    Search
+                  </button>
+                </div>
+                <div class="col-md-6 my-3">
+                  <img
+                    src="images/bike-3.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row align-items-center px-md-5 mx-md-5">
+                <div class="col-md-6 my-3">
+                  <h1 class="display-4 fw-bolder">Ride-on R15 V4 with Smile</h1>
+                  <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit
+                    mollit.
+                  </p>
+                  <button
+                    type="button"
+                    class="btn btn-danger px-5 py-2 fw-bold fs-5"
+                  >
+                    Search
+                  </button>
+                </div>
+                <div class="col-md-6 my-3">
+                  <img
+                    src="images/bike-2.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item ">
+              <div class="row align-items-center px-md-5 mx-md-5">
+                <div class="col-md-6 my-3">
+                  <h1 class="display-4 fw-bolder">Ride-on R15 V4 with Smile</h1>
+                  <p>
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit
+                    mollit.
+                  </p>
+                  <button
+                    type="button"
+                    class="btn btn-danger px-5 py-2 fw-bold fs-5"
+                  >
+                    Search
+                  </button>
+                </div>
+                <div class="col-md-6 my-3">
+                  <img
+                    src="images/bike-5.png"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+      <!-- Fetured Bikes In This Year -->
+      <section class="container ">
+        <h1 class="text-center fw-bold pt-5 mt-5 ">Fetured Bikes In This Year</h1>
+        <small class="text-center d-block text-danger fw-bold">Best bi<span class="text-decoration-underline ">ke  coll</span>ection</small>
+        <div class="row my-5 py-5">
+            <div class="col-md-4">
+                <img class="img-fluid" src="images/feature-bike.jpg" alt="">
+            </div>
+            <div class="col-md-4">
+                <img class="img-fluid" src="images/bike-4.jpg" alt="">
+            </div>
+            <div class="col-md-4">
+                <img class="img-fluid" src="images/Bike 2.png" alt="">
+            </div>
+        </div>
       </section>
     </header>
+
     <!-- bs js  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
