--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <!-- font awsome  -->
+    <script src="https://kit.fontawesome.com/e9dd5c49ca.js" crossorigin="anonymous"></script>
     <!-- extarnal css  -->
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -136,7 +138,7 @@
                 </div>
               </div>
             </div>
-            <div class="carousel-item ">
+            <div class="carousel-item">
               <div class="row align-items-center px-md-5 mx-md-5">
                 <div class="col-md-6 my-3">
                   <h1 class="display-4 fw-bolder">Ride-on R15 V4 with Smile</h1>
@@ -182,24 +184,168 @@
           </button>
         </div>
       </section>
+    </header>
+    <!-- main section  -->
+    <main>
       <!-- Fetured Bikes In This Year -->
-      <section class="container ">
-        <h1 class="text-center fw-bold pt-5 mt-5 ">Fetured Bikes In This Year</h1>
-        <small class="text-center d-block text-danger fw-bold">Best bi<span class="text-decoration-underline ">ke  coll</span>ection</small>
-        <div class="row my-5 py-5">
-            <div class="col-md-4">
-                <img class="img-fluid" src="images/feature-bike.jpg" alt="">
-            </div>
-            <div class="col-md-4">
-                <img class="img-fluid" src="images/bike-4.jpg" alt="">
-            </div>
-            <div class="col-md-4">
-                <img class="img-fluid" src="images/Bike 2.png" alt="">
-            </div>
+      <section class="container">
+        <h1 class="text-center fw-bold pt-5 mt-5">
+          Fetured Bikes In This Year
+        </h1>
+        <small class="text-center d-block text-danger fw-bold"
+          >Best bi<span class="text-decoration-underline">ke coll</span
+          >ection</small
+        >
+        <div class="row my-5 pb-5">
+          <div class="col-md-4">
+            <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
+          </div>
+          <div class="col-md-4">
+            <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
+          </div>
         </div>
       </section>
-    </header>
-
+      <!-- latest News -->
+      <section class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card p-3">
+              <img src="images/bike-1.png" class="card-img-top" alt="..." />
+              <div class="px-1 mt-3 pt-3">
+                <h2 class="fw-bold">Ducati XDIAVEL S-73</h2>
+                <h6 class="card-text py-3 lh-lg">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lacus, fermentum amet faucibus sed id nisi lectus at.
+                </h6>
+                <button
+                  type="button"
+                  class="btn btn-danger px-5 py-3 fw-bold fs-5"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card p-3">
+              <img src="images/bike-3.png" class="card-img-top" alt="..." />
+              <div class="px-1 mt-3 pt-3">
+                <h2 class="fw-bold">Ducati XDIAVEL S-73</h2>
+                <h6 class="card-text py-3 lh-lg">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lacus, fermentum amet faucibus sed id nisi lectus at.
+                </h6>
+                <button
+                  type="button"
+                  class="btn border border-danger text-danger px-5 py-3 fw-bold fs-5"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card p-3">
+              <img src="images/bike-2.png" class="card-img-top" alt="..." />
+              <div class="px-1 mt-3 pt-3">
+                <h2 class="fw-bold">Ducati XDIAVEL S-73</h2>
+                <h6 class="card-text py-3 lh-lg">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Lacus, fermentum amet faucibus sed id nisi lectus at.
+                </h6>
+                <button
+                  type="button"
+                  class="btn border border-danger text-danger px-5 py-3 fw-bold fs-5"
+                >
+                  Read More
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Happy Clients says -->
+      <section class="container py-5 my-5">
+        <div class="row pt-5 mt-5">
+          <h1 class="mb-5 text-center pb-3 fw-bold">
+            Happy <span class="text-danger">Clients says</span>
+          </h1>
+          <div class="col-md-4">
+            <div class="card p-3">
+              <img
+                src="images/user-1.png"
+                class="card-img-top p-3 w-50 d-block mx-auto rounded-circle"
+                alt="..."
+              />
+              <div class="px-1   text-center">
+                <p class=" py-3 lh-lg fw-bold text-secondary">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Slate
+                  helps you see how many more days you need to work to reach
+                  your financial goal for the month and year.
+                </p>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <h6 class="text-info pt-3">Regina Miles</h6>
+                <h6 class="py-3">Banker</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card p-3">
+              <img
+                src="images/user-2.png"
+                class="card-img-top p-3 w-50 d-block mx-auto rounded-circle"
+                alt="..."
+              />
+              <div class="px-1   text-center">
+                <p class=" py-3 lh-lg fw-bold text-secondary">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Slate
+                  helps you see how many more days you need to work to reach
+                  your financial goal for the month and year.
+                </p>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <h6 class="text-info pt-3">Regina Miles</h6>
+                <h6 class="py-3">Banker</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card p-3">
+              <img
+                src="images/user-3.png"
+                class="card-img-top p-3 w-50 d-block mx-auto rounded-circle"
+                alt="..."
+              />
+              <div class="px-1   text-center">
+                <p class=" py-3 lh-lg fw-bold text-secondary">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Slate
+                  helps you see how many more days you need to work to reach
+                  your financial goal for the month and year.
+                </p>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <i class="fa-solid fa-star fa-2x"></i>
+                <h6 class="text-info pt-3">Regina Miles</h6>
+                <h6 class="py-3">Banker</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Frequently Asked Questions -->
+    </main>
     <!-- bs js  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
