--- a/index.html
+++ b/index.html
@@ -345,7 +345,101 @@
         </div>
       </section>
       <!-- Frequently Asked Questions -->
+      <section class="container my-5 py-5">
+        <h1 class="text-center my-5 pb-5">Frequently Asked Questions</h1>
+        <div class="row  pt-3">
+            <div class="col-md-6">
+                <img class="img-fluid" src="images/faq.png"  alt="">
+            </div>
+            <div class="col-md-6">
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <h4 class="text-secondary">What are the most important things I should know about riding bike</h4>
+                        </button>
+                      </h2>
+                      <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                         <h4  class="text-secondary">
+                            How can I tell if my helmet is old and I need a new one?
+                         </h4>
+                        </button>
+                      </h2>
+                      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                         <h4  class="text-secondary">
+                           My bike has been in storage is it safe to ride
+                         </h4>
+                        </button>
+                      </h2>
+                      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                      </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="headingFoure">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseFoure">
+                         <h4  class="text-secondary">
+                            What rules should I follow when riding my bike?
+                         </h4>
+                        </button>
+                      </h2>
+                      <div id="collapseFoure" class="accordion-collapse collapse" aria-labelledby="headingFoure" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+        </div>
+      </section>
     </main>
+    <!-- footer  -->
+    <footer class="container-fluid bg-dark">
+        <div class="container">
+            <div class="row text-white py-5 pb-2">
+                <div class="col-md-8">
+                    <div class="row py-4">
+                      <div class="col d-flex gap-5">  
+                        <p>Download Now</p>
+                        <p>License</p>
+                      </div>
+                    </div>
+                    <div class="d-flex gap-5 ">
+                        <p>About</p>
+                        <p>Features</p>
+                        <p>Pricing</p>
+                        <p>Careers</p>
+                        <p>Help </p>
+                        <p>Privacy Policy</p>
+                    </div>
+                    <p class="pt-3 pb-5">© 2020 bike. All rights reserved</p>
+                </div>
+                <div class="col-md-4 pt-3">
+                    <h4  >Get the App</h4>
+                    <img src="images/ios.png" class="py-3 img-fluid" alt="">
+                    <img src="images/android.png" class="py-3 img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- bs js  -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
