--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
           >Best bi<span class="text-decoration-underline">ke coll</span
           >ection</small
         >
-        <div class="row my-5 pb-5">
-          <div class="col-md-4">
+        <div class="row my-5 pb-5 ">
+          <div class="col-md-4 my-3">
             <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 my-3">
             <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 my-3">
             <img class="img-fluid" src="images/feature-bike.jpg" alt="" />
           </div>
         </div>
@@ -212,7 +212,7 @@
       <section class="container">
         <div class="row">
           <div class="col-md-4">
-            <div class="card p-3">
+            <div class="card p-3 my-3">
               <img src="images/bike-1.png" class="card-img-top" alt="..." />
               <div class="px-1 mt-3 pt-3">
                 <h2 class="fw-bold">Ducati XDIAVEL S-73</h2>
@@ -229,7 +229,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 my-3">
             <div class="card p-3">
               <img src="images/bike-3.png" class="card-img-top" alt="..." />
               <div class="px-1 mt-3 pt-3">
@@ -247,7 +247,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 my-3">
             <div class="card p-3">
               <img src="images/bike-2.png" class="card-img-top" alt="..." />
               <div class="px-1 mt-3 pt-3">
@@ -273,7 +273,7 @@
           <h1 class="mb-5 text-center pb-3 fw-bold">
             Happy <span class="text-danger">Clients says</span>
           </h1>
-          <div class="col-md-4">
+          <div class="col-md-4 my-3">
             <div class="card p-3">
               <img
                 src="images/user-1.png"
@@ -296,7 +296,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 my-3">
             <div class="card p-3">
               <img
                 src="images/user-2.png"
@@ -319,7 +319,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4 my-3">
             <div class="card p-3">
               <img
                 src="images/user-3.png"
@@ -348,10 +348,10 @@
       <section class="container my-5 py-5">
         <h1 class="text-center my-5 pb-5">Frequently Asked Questions</h1>
         <div class="row  pt-3">
-            <div class="col-md-6">
+            <div class="col-md-6 my-3">
                 <img class="img-fluid" src="images/faq.png"  alt="">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 my-3">
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingOne">
@@ -422,13 +422,13 @@
                         <p>License</p>
                       </div>
                     </div>
-                    <div class="d-flex gap-5 ">
-                        <p>About</p>
-                        <p>Features</p>
-                        <p>Pricing</p>
-                        <p>Careers</p>
-                        <p>Help </p>
-                        <p>Privacy Policy</p>
+                    <div class="d-flex flex-wrap">
+                        <p  >About</p>
+                        <p class="ms-3 ">Features</p>
+                        <p class="ms-3 ">Pricing</p>
+                        <p class="ms-3 ">Careers</p>
+                        <p class="ms-3 ">Help </p>
+                        <p >Privacy Policy</p>
                     </div>
                     <p class="pt-3 pb-5">© 2020 bike. All rights reserved</p>
                 </div>
